--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.2
 
+      # Test Graham's PR version of the Nix installer action
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@push-mzxqxkwyklkl
+      
       - name: Verify Flake Integrity
         run: nix flake check
+      
+      - name: Bing Bong
+        run: nix --version
 #jobs:
 #  test:
 #    runs-on: ubuntu-latest
